# planager

./: README.md  pyproject.toml
docs/: index.html
src/planager/: __init__.py  cli.py
src/planager/templates/: AGENTS.md.snippet  snippet.md
src/planager/templates/claude/planager/: SKILL.md
src/planager/templates/claude/planager-status/: SKILL.md
src/planager/templates/codex/planager/: SKILL.md
src/planager/templates/pi/planager/: SKILL.md
src/planager/templates/pi/planager-status/: SKILL.md
src/planager/templates/plan/: SKILL.md
src/planager/templates/plan-status/: SKILL.md
src/planager/templates/planager/: SKILL.md
tests/: test_cli.py
