[project]
name = "planager"
version = "0.4.0"
description = "Feature plans for LLM-assisted development. One command sets up your project so coding agents automatically create, follow, and maintain structured plans."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "forest-d" }]
readme = "README.md"
keywords = ["claude", "codex", "llm", "planning", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]

[project.urls]
Repository = "https://github.com/forest-d/planager"

[project.scripts]
planager = "planager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planager"]


[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
